# libslope

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  Taskfile.yml  codecov.yml  flake.nix  package-lock.json  package.json  release-please-config.json  shell.nix
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yaml  build-and-test.yml  build-docs.yml  ci.yaml  codecov.yaml  docs.yaml  leaks.yml  release-please.yml  release.yml
_codeql_build_dir/: DartConfiguration.tcl  Makefile  tests  tests_include-b12d07c.cmake  tests_tests-b12d07c.cmake
_codeql_build_dir/src/: Makefile
assets/: custom.css
bindings/: CMakeLists.txt
bindings/julia/: CMakeLists.txt  cv.cpp  cv.h  fit.cpp  fit.h  helpers.cpp  helpers.h  predict.cpp  predict.h  slopejll.cpp
bindings/python/: CMakeLists.txt
bindings/python/sortedl1/: setup.py.in
bindings/python/sortedl1/sortedl1/: slope.py
cmake/: FindLcov.cmake  FindSphinx.cmake  slopeConfig.cmake.in
docs/: Doxyfile  conf.py  convergence.md  dependencies.md  getting_started.md  groups.dox  index.rst  mainpage.dox  mainpage.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: index.doctree  slope.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/api/: index.html
docs/_build/xml/: Doxyfile.xml  index.xml
include/slope/: estimate_alpha.h  math.h  slope.h  slope_path.h  utils.h
include/slope/solvers/: hybrid_cd.h
src/: .gitignore  CMakeLists.txt  main.cpp
src/slope/: cd.h  cluster2.h  clusters.cpp  clusters.h  constants.h  cv.cpp  cv.h  diagnostics.h  estimate_alpha.h  fit_slope.h  folds.cpp  folds.h  helpers.h  kkt_check.cpp  kkt_check.h  logger.h  math.cpp  math.h  normalize.cpp  normalize.h  objectives.cpp  objectives.h  ols.cpp  parameters.h  pgd.h  qnorm.cpp  regularization_sequence.cpp  regularization_sequence.h  results.h  score.cpp  score.h  screening.cpp  screening.h  setup_objective.cpp  setup_objective.h  slope.cpp  slope.h  slope_fit.h  slope_path.h  slope_threshold.cpp  (+7 more)
src/slope/losses/: binomial.cpp  binomial.h  gaussian.h  logistic.cpp  logistic.h  loss.h  multinomial.cpp  multinomial.h  poisson.cpp  poisson.h  quadratic.cpp  quadratic.h  setup_loss.cpp  setup_loss.h
src/slope/objectives/: binomial.cpp  binomial.h  gaussian.cpp  gaussian.h  math.h  multinomial.cpp  multinomial.h  objective.h  poisson.cpp  poisson.h  setup_objective.cpp  setup_objective.h
src/slope/solvers/: cd.h  hybrid.cpp  hybrid.h  hybrid_cd.h  hybrid_pgd.h  pgd.cpp  pgd.h  setup_solver.cpp  setup_solver.h  slope_threshold.cpp  solver.h
tests/: alpha_est.cpp  assertions.cpp  benchmarks.cpp  binomial.cpp  clusters.cpp  cv.cpp  gaussian.cpp  generate_data.cpp  generate_data.hpp  hybrid.cpp  input_validation.cpp  interrupt.cpp  lambda_sequence.cpp  load_data.cpp  load_data.hpp  logger.cpp  logistic.cpp  map.cpp  math.cpp  multinomial.cpp  normalization.cpp  path.cpp  poisson.cpp  predictions.cpp  printing.cpp  prox.cpp  qnorm.cpp  quadratic.cpp  real_data.cpp  relax.cpp  score.cpp  screening.cpp  sparse.cpp  standardize.cpp  test.cpp  test_helpers.hpp  thresholding.cpp  utils.cpp  views.cpp  zero_variance.cpp
tests/data/: abalone.csv  diabetes.csv  wine.csv
